--- a/deep learning/hw05/chapter11_part03_transformer.ipynb
+++ b/deep learning/hw05/chapter11_part03_transformer.ipynb
@@ -147,6 +147,239 @@
     ")\n",
     "text_only_train_ds = train_ds.map(lambda x, y: x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f776410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbd8f9f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sample_dataset(dataset, percent, total_size_estimate=20000):\n",
+    "    \"\"\"نمونه‌گیری تصادفی از tf.data.Dataset بدون تبدیل به لیست\"\"\"\n",
+    "    sample_size = max(1, int(percent * total_size_estimate))\n",
+    "    indices = sorted(random.sample(range(total_size_estimate), sample_size))\n",
+    "\n",
+    "    sampled = dataset.enumerate().filter(lambda i, data: tf.reduce_any(i == indices)).map(lambda i, data: data)\n",
+    "    return sampled.batch(batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "711bacc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF60E7DEA0> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF60E7DEA0>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF60E7DEA0> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF60E7DEA0>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF60E7DAB0> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF60E7DAB0>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF60E7DAB0> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF60E7DAB0>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF34965D80> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF34965D80>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF34965D80> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF34965D80>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF34964EE0> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF34964EE0>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF34964EE0> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF34964EE0>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF34967D00> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF34967D00>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF34967D00> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF34967D00>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING:tensorflow:AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF34966D40> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF34966D40>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "WARNING: AutoGraph could not transform <function sample_dataset.<locals>.<lambda> at 0x000001CF34966D40> and will run it as-is.\n",
+      "Cause: could not parse the source code of <function sample_dataset.<locals>.<lambda> at 0x000001CF34966D40>: found multiple definitions with identical signatures at the location. This error may be avoided by defining each lambda on a single line and with unique argument names. The matching definitions were:\n",
+      "Match 0:\n",
+      "lambda i, data: data\n",
+      "\n",
+      "Match 1:\n",
+      "lambda i, data: tf.reduce_any(i == indices)\n",
+      "\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n"
+     ]
+    }
+   ],
+   "source": [
+    "small_train_ds = sample_dataset(train_ds.unbatch(), percent=0.01, total_size_estimate=20000)\n",
+    "small_val_ds = sample_dataset(val_ds.unbatch(), percent=0.01, total_size_estimate=5000)\n",
+    "small_test_ds = sample_dataset(test_ds.unbatch(), percent=0.01, total_size_estimate=10000)\n",
+    "text_only_small_train_ds = small_train_ds.map(lambda x, y: x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e193bf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train (full): 61520 samples\n",
+      "Train (small): 200 samples\n",
+      "Validation (full): 2880 samples\n",
+      "Validation (small): 29 samples\n",
+      "Test (full): 25000 samples\n",
+      "Test (small): 100 samples\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_samples(dataset):\n",
+    "    return sum(1 for _ in dataset.unbatch())\n",
+    "\n",
+    "# شمارش تعداد نمونه‌های دیتاست اصلی\n",
+    "num_train_full = count_samples(train_ds)\n",
+    "num_val_full = count_samples(val_ds)\n",
+    "num_test_full = count_samples(test_ds)\n",
+    "\n",
+    "# شمارش تعداد نمونه‌های دیتاست کوچک‌شده\n",
+    "num_small_train = count_samples(small_train_ds)\n",
+    "num_small_val = count_samples(small_val_ds)\n",
+    "num_small_test = count_samples(small_test_ds)\n",
+    "\n",
+    "# نمایش تعداد نمونه‌ها\n",
+    "print(f\"Train (full): {num_train_full} samples\")\n",
+    "print(f\"Train (small): {num_small_train} samples\")\n",
+    "print(f\"Validation (full): {num_val_full} samples\")\n",
+    "print(f\"Validation (small): {num_small_val} samples\")\n",
+    "print(f\"Test (full): {num_test_full} samples\")\n",
+    "print(f\"Test (small): {num_small_test} samples\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8043ad54",
+   "metadata": {},
+   "source": [
+    "**Vectorizing the data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ed7005a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras import layers\n",
+    "\n",
+    "max_length = 600\n",
+    "max_tokens = 20000\n",
+    "text_vectorization = layers.TextVectorization(\n",
+    "    max_tokens=max_tokens,\n",
+    "    output_mode=\"int\",\n",
+    "    output_sequence_length=max_length,\n",
+    ")\n",
+    "text_vectorization.adapt(text_only_small_train_ds)\n",
+    "\n",
+    "int_train_ds = small_train_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "int_val_ds = small_val_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)\n",
+    "int_test_ds = small_test_ds.map(\n",
+    "    lambda x, y: (text_vectorization(x), y),\n",
+    "    num_parallel_calls=4)"
+   ]
   }
  ],
  "metadata": {
