--- a/deep learning/hw05/chapter11_part03_transformer.ipynb
+++ b/deep learning/hw05/chapter11_part03_transformer.ipynb
@@ -660,6 +660,65 @@
     "    custom_objects={\"TransformerEncoder\": TransformerEncoder})\n",
     "print(f\"Test acc: {model.evaluate(int_test_ds)[1]:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a2b58c7",
+   "metadata": {},
+   "source": [
+    "#### Using positional encoding to re-inject order information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e1edb19",
+   "metadata": {},
+   "source": [
+    "**Implementing positional embedding as a subclassed layer**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0124b82e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionalEmbedding(layers.Layer):\n",
+    "    def __init__(self, sequence_length, input_dim, output_dim, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        # فقط همینجا mask_zero=True می‌دهیم، نیازی به compute_mask نداریم\n",
+    "        self.token_embeddings = layers.Embedding(\n",
+    "            input_dim=input_dim,\n",
+    "            output_dim=output_dim,\n",
+    "            mask_zero=True\n",
+    "        )\n",
+    "        self.position_embeddings = layers.Embedding(\n",
+    "            input_dim=sequence_length,\n",
+    "            output_dim=output_dim\n",
+    "        )\n",
+    "        self.sequence_length = sequence_length\n",
+    "        self.input_dim = input_dim\n",
+    "        self.output_dim = output_dim\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        length = tf.shape(inputs)[-1]\n",
+    "        positions = tf.range(start=0, limit=length, delta=1)\n",
+    "        embedded_tokens    = self.token_embeddings(inputs)\n",
+    "        embedded_positions = self.position_embeddings(positions)\n",
+    "        return embedded_tokens + embedded_positions\n",
+    "\n",
+    "    # متد compute_mask را حذف کردم\n",
+    "\n",
+    "    def get_config(self):\n",
+    "        config = super().get_config()\n",
+    "        config.update({\n",
+    "            \"output_dim\": self.output_dim,\n",
+    "            \"sequence_length\": self.sequence_length,\n",
+    "            \"input_dim\": self.input_dim,\n",
+    "        })\n",
+    "        return config\n"
+   ]
   }
  ],
  "metadata": {
